--- a/package.json
+++ b/package.json
@@ -21,16 +21,24 @@
     "mheap"
   ],
   "scripts": {
+    "test": "jest",
     "lint": "eslint src/**/*.{js,ts} --no-error-on-unmatched-pattern",
     "lint-fix": "eslint --fix src/**/*.{js,ts} --no-error-on-unmatched-pattern"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-typescript-prettier": "^2.1.1",
+    "jest": "^26.0.1",
     "prettier": "^2.0.5",
-    "tslint": "^6.1.2",
+    "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.19.2",
+    "call-me-maybe": "^1.0.1"
+  },
   "license": "MIT"
 }
